MIP: Add interactive demo script for Node.js/Express implementation
Adds a Puppeteer-based demo script that walks through the MIP protocol
with explanations and pauses for presenting. The demo covers:
- Starting 3 MIP nodes (Alpha, Beta, Gamma)
- Manual connection establishment with approval flow
- Web of trust auto-approval mechanism
- Cross-organization member search with approval
- Certificate of Good Standing (COGS) request flow

Run with: cd mip_reference/node-express && npm run demo

--- a/mip_reference/node-express/package.json
+++ b/mip_reference/node-express/package.json
@@ -4,11 +4,13 @@
   "description": "MIP Reference Implementation - Node.js/Express",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "demo": "node demo.js"
   },
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.21.0",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "puppeteer": "^24.0.0"
   }
 }
